III-1552 Fix for vertical jumping on hover

--- a/src/styles/suggestions.less
+++ b/src/styles/suggestions.less
@@ -85,5 +85,6 @@
     right: 5px;
     top: 5px;
     font-size: 90%;
+    height: 24px;
   }
 }
